# libowfat

./: .gitmodules  CMakeLists.txt  GNUmakefile  buffer.h  cfg.sh  ent.c  errmsg.h  errmsg_int.h  fmt.h  iarray.h  io.h  io_internal.h  iopause.h1  iopause.h2  likely.h  readclose.h  scan.h  socket.h  stralloc.h  t.c  tai.h  trysl.c  windoze.h
array/: array_allocate.c  array_bytes.c  array_cat.c  array_cat0.c  array_catb.c  array_cate.c  array_cats.c  array_cats0.c  array_equal.c  array_fail.c  array_get.c  array_length.c  array_reset.c  array_trunc.c  array_truncate.c  iarray_allocate.c  iarray_free.c  iarray_get.c  iarray_init.c  iarray_length.c
buffer/: buffer_0.c  buffer_0small.c  buffer_1.c  buffer_1small.c  buffer_2.c  buffer_close.c  buffer_feed.c  buffer_flush.c  buffer_free.c  buffer_fromarray.c  buffer_frombuf.c  buffer_fromsa.c  buffer_get.c  buffer_get_new_token_sa.c  buffer_get_new_token_sa_pred.c  buffer_get_token.c  buffer_get_token_pred.c  buffer_get_token_sa.c  buffer_get_token_sa_pred.c  buffer_getc.c  buffer_getline_sa.c  buffer_getn.c  buffer_getnewline_sa.c  buffer_init.c  buffer_init_free.c  buffer_mmapread.c  buffer_munmap.c  buffer_peek.c  buffer_put.c  buffer_put8long.c  buffer_putalign.c  buffer_puterror.c  buffer_puterror2.c  buffer_putflush.c  buffer_putlong.c  buffer_putlonglong.c  buffer_putm_internal.c  buffer_putm_internal_flush.c  buffer_putnlflush.c  buffer_puts.c  (+19 more)
byte/: byte_chr.c  byte_copy.c  byte_copyr.c  byte_diff.c  byte_equal_notimingattack.c  byte_rchr.c  byte_zero.c
case/: case_diffb.c  case_lowerb.c  case_lowers.c  case_starts.c
cdb/: cdb.c  cdb_hash.c  cdb_make.c  cdb_traverse.c
critbit/: critbit.c
dns/: dns_dfd.c  dns_domain.c  dns_dtda.c  dns_ip.c  dns_ip6.c  dns_ipq.c  dns_ipq6.c  dns_mx.c  dns_name.c  dns_nd.c  dns_nd6.c  dns_packet.c  dns_random.c  dns_rcip.c  dns_rcrw.c  dns_resolve.c  dns_sortip.c  dns_sortip6.c  dns_transmit.c  dns_txt.c
examples/: buffer_getline.c  byte.c  str.c
fmt/: fmt_8long.c  fmt_8longlong.c  fmt_asn1derlength.c  fmt_asn1dertag.c  fmt_double.c  fmt_escapecharc.c  fmt_escapecharjson.c  fmt_escapecharquotedprintable.c  fmt_escapecharquotedprintableutf8.c  fmt_escapecharxml.c  fmt_fill.c  fmt_httpdate.c  fmt_human.c  fmt_humank.c  fmt_iso8601.c  fmt_long.c  fmt_longlong.c  fmt_minus.c  fmt_netstring.c  fmt_pad.c  fmt_pb_double.c  fmt_pb_float.c  fmt_pb_int.c  fmt_pb_sint.c  fmt_pb_string.c  fmt_pb_tag.c  fmt_pb_type0_sint.c  fmt_pb_type1_double.c  fmt_pb_type1_fixed64.c  fmt_pb_type2_string.c  fmt_pb_type5_fixed32.c  fmt_pb_type5_float.c  fmt_plusminus.c  fmt_str.c  fmt_strm_internal.c  fmt_strn.c  fmt_tohex.c  fmt_ulong.c  fmt_ulong0.c  fmt_ulonglong.c  (+5 more)
io/: io_appendfile.c  io_block.c  io_canread.c  io_canwrite.c  io_close.c  io_closeonexec.c  io_createfile.c  io_debugstring.c  io_dontwantread.c  io_dontwantwrite.c  io_eagain.c  io_eagain_read.c  io_eagain_write.c  io_fd.c  io_finishandshutdown.c  io_getcookie.c  io_mmapwritefile.c  io_nonblock.c  io_passfd.c  io_pipe.c  io_readfile.c  io_readwritefile.c  io_receivefd.c  io_sendfile.c  io_setcookie.c  io_sigpipe.c  io_socketpair.c  io_timedout.c  io_timeout.c  io_timeouted.c  io_tryread.c  io_tryreadtimeout.c  io_trywrite.c  io_trywritetimeout.c  io_waitread.c  io_waituntil.c  io_waituntil2.c  io_waitwrite.c  io_wantread.c  io_wantwrite.c  (+15 more)
mmap/: mmap_private.c  mmap_read.c  mmap_shared.c  mmap_unmap.c
mult/: imult16.c  imult32.c  imult64.c  range_arrayinbuf.c  range_str2inbuf.c  range_str4inbuf.c  range_strinbuf.c  umult16.c  umult32.c  umult64.c
open/: open_append.c  open_excl.c  open_read.c  open_rw.c  open_trunc.c  open_write.c  openreadclose.c  readclose.c
scan/: scan_8longlong.c  scan_asn1derlength.c  scan_asn1dertag.c  scan_double.c  scan_fromhex.c  scan_httpdate.c  scan_int.c  scan_iso8601.c  scan_longlong.c  scan_pb_tag.c  scan_pb_type0_sint.c  scan_pb_type1_double.c  scan_pb_type2_stringlen.c  scan_pb_type5_float.c  scan_uint.c  scan_ulonglong.c  scan_ulongn.c  scan_ushort.c  scan_utf8_sem.c  scan_varint.c  scan_xlong.c  scan_xlonglong.c
socket/: fmt_ip4.c  fmt_ip6.c  fmt_ip6_flat.c  fmt_ip6c.c  fmt_ip6if.c  fmt_ip6ifc.c  init.c  scan_ip4.c  scan_ip6.c  scan_ip6_flat.c  scan_ip6if.c  socket_accept4.c  socket_accept6.c  socket_bind4.c  socket_bind4_reuse.c  socket_bind6.c  socket_bind6_reuse.c  socket_broadcast.c  socket_connect4.c  socket_connect6.c  socket_connected.c  socket_deferaccept.c  socket_fastopen.c  socket_fastopen_connect4.c  socket_fastopen_connect6.c  socket_getifidx.c  socket_getifname.c  socket_listen.c  socket_local4.c  socket_local6.c  socket_mchopcount6.c  socket_mcjoin4.c  socket_mcjoin6.c  socket_mcleave4.c  socket_mcleave6.c  socket_mcloop4.c  socket_mcloop6.c  socket_mcttl4.c  socket_quickack.c  socket_recv4.c  (+16 more)
str/: str_chr.c  str_diff.c  str_diffn.c  str_len.c  str_rchr.c
stralloc/: stralloc_append.c  stralloc_cat.c  stralloc_catb.c  stralloc_catlong0.c  stralloc_catm_internal.c  stralloc_cats.c  stralloc_catulong0.c  stralloc_chomp.c  stralloc_chop.c  stralloc_copy.c  stralloc_copyb.c  stralloc_copys.c  stralloc_diff.c  stralloc_diffs.c  stralloc_free.c  stralloc_init.c  stralloc_ready.c  stralloc_readyplus.c  stralloc_starts.c  stralloc_zero.c
taia/: taia_add.c  taia_frac.c  taia_half.c  taia_less.c  taia_now.c  taia_sub.c
test/: array.c  b64decode.c  b64encode.c  buffer_1.c  buffer_fromsa.c  buffer_mmap.c  buffer_tosa.c  byte_copy.c  cas.c  cdbget2.c  cescape.c  client.c  dllink.c  dnsip.c  fdpassing.c  fmt.c  fmt_httpdate.c  fmt_human.c  fmt_ip6.c  fmt_iso8691.c  fmt_long.c  fmt_longlong.c  fmt_strm_alloca.c  httpd.c  io.c  io2.c  io3.c  io4.c  io5.c  iob.c  iom.c  marshal.c  mult.c  netstring.c  protobuf.c  proxy.c  range.c  readhttp.c  scan.c  scan_long.c  (+10 more)
textcode/: fmt_base64.c  fmt_base64url.c  fmt_cescape.c  fmt_foldwhitespace.c  fmt_hexdump.c  fmt_html.c  fmt_html_tagarg.c  fmt_jsonescape.c  fmt_ldapescape.c  fmt_ldapescape2.c  fmt_quotedprintable.c  fmt_urlencoded.c  fmt_uuencoded.c  fmt_xml.c  fmt_yenc.c  scan_base64.c  scan_base64url.c  scan_cescape.c  scan_hexdump.c  scan_html.c  (+4 more)
(+6 files in other folders)
